# dgii-ecf

./: .gitignore  README.md  license.txt  pyproject.toml
dgii_ecf/: alerts.py  api.py  config.py  dashboard.py  delivery.py  event_types.py  hooks.py  install.py  modules.txt  patches.txt  printing.py  provider_health.py  readiness.py  tasks.py
dgii_ecf/dgii_ecf/doctype/ecf_delivery_event/: ecf_delivery_event.json  ecf_delivery_event.py
dgii_ecf/dgii_ecf/doctype/ecf_document_log/: ecf_document_log.js  ecf_document_log.json  ecf_document_log.py  ecf_document_log_list.js
dgii_ecf/dgii_ecf/doctype/ecf_gateway_account/: ecf_gateway_account.json  ecf_gateway_account.py
dgii_ecf/dgii_ecf/doctype/ecf_provider_settings/: ecf_provider_settings.js  ecf_provider_settings.json  ecf_provider_settings.py
dgii_ecf/ecf/: builder.py
dgii_ecf/events/: sales_invoice.py
dgii_ecf/fixtures/: print_format.json
dgii_ecf/mseller/: client.py
dgii_ecf/patches/: __init__.py  generalize_document_log_reference.py
dgii_ecf/providers/: base.py  errors.py  mseller.py  registry.py
dgii_ecf/public/js/: ecf_document_log.js  sales_invoice.js
dgii_ecf/templates/print_formats/: dominican_sales_invoice.html  dominican_sales_invoice.html.bak
dgii_ecf/tests/: test_delivery_resilience.py  test_dgii_ecf.py  test_frappe_structure.py  test_workspace_sidebar.py
dgii_ecf/translations/: es.csv
dgii_ecf/workspace_sidebar/: dgii_ecf.json
docs/: ecf-operations-runbook.md  mseller-contingency-design.md  mseller-delivery-resilience.md  mseller-live-smoke-migor-2026-07-13.md
(+2 files in other folders)
